# AL

./: .env.discord-bot.example  .env.telegram-bot.example  .gitignore  AGENTS.md  AL.code-workspace  README.md  pyrightconfig.json  temp.md  temp.py
apps/backend/: pyproject.toml
apps/backend/al_backend/: __init__.py  activity_analytics.py  activity_authors.py  activity_deltas.py  activity_math.py  activity_time.py  api_security.py  app.py  auth.py  author_avatar_cache.py  backend_composable_host.py  container.py  dependencies.py  discord_author_mappings.py  discord_bot.py  hourly_fill_rules.py  indexes.py  local_live_state_guard.py  main.py  meeting_summary.py  models.py  mongo_composable.py  overtime_rules.py  protocol.py  rebuild_jobs.py  report_worker.py  repository.py  router_utils.py  settings.py  storage.py  telegram_bot.py
apps/backend/al_backend/repositories/: auth.py  authors.py  device_profiles.py  settings.py
apps/backend/al_backend/routers/: analytics.py  auth.py  authors.py  calendar.py  discord.py  health.py  publisher_profiles.py  reports.py  settings.py  site_users.py  telegram.py
apps/backend/al_backend/services/: activity_aggregation.py  activity_aggregation_rebuild.py  activity_day_summary_snapshots.py  activity_live_summary.py  activity_raw_event_accounting.py  activity_status_intervals.py  activity_summary.py  activity_summary_analytics.py  activity_summary_cache.py  activity_summary_helpers.py  calendar.py  (+34 more)
apps/backend/tests/: activity_status_helpers.py  fakes.py  test_activity_hourly.py  test_activity_ingest.py  test_activity_status_events.py  test_activity_summary.py  test_activity_summary_core.py  test_auth_sessions.py  test_author_avatar_cache.py  test_calendar.py  test_device_profiles.py  test_discord_meetings.py  test_indexes.py  test_meeting_recordings.py  test_overtime_rules.py  test_protocol.py  test_publisher_profiles.py  test_rebuild_jobs.py  test_reports_and_authors.py  test_server_stats.py  test_settings_openai_stats.py  test_telegram_activity.py
(+137 files in other folders)
