[project]
name = "al-backend"
version = "0.1.0"
description = "Activity Logger backend API"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=42.0.0",
    "fastapi[standard]>=0.115.0",
    "pymongo>=4.10.0",
]

[project.scripts]
al-telegram-bot = "al_backend.telegram_bot:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
