[project]
name = "al-backend"
version = "0.1.0"
description = "Activity Logger backend API"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=42.0.0",
    "discord-ext-voice-recv>=0.5.2a179",
    "discord.py>=2.4.0",
    "fastapi[standard]>=0.115.0",
    "openai>=2.33.0",
    "pymongo>=4.10.0",
    "pynacl>=1.5.0",
]

[project.scripts]
al-telegram-bot = "al_backend.telegram_bot:main"
al-discord-bot = "al_backend.discord_bot:main"
al-apply-discord-author-mappings = "al_backend.discord_author_mappings:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
